# pipaper

./: CMakeLists.txt  xtoolchain
src/: CMakeLists.txt  bmp.cxx  bmp.hh  canvas.cxx  canvas.hh  debug.hh  dirlist.cxx  dirlist.hh  epaper.cxx  sevensegment.cxx  sevensegment.hh
src/lowlevel/: bcm2835modes.hh  display.cxx  display.hh  epd213v2.cxx  epd213v2.hh  pins.hh  spi.cxx  spi.hh
src/os/: signal.cxx  signal.hh
